docs: Add license, code of conduct & contributing docs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "plugin"
   ],
   "author": "Chris Swithinbank <swithinbank@gmail.com> (http://chrisswithinbank.net/)",
-  "license": "GPL-3.0",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
     "url": "https://github.com/delucis/bgio-effects/issues"
   },
