--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^16.9.34",
     "boardgame.io": "^0.39.16",
     "coveralls": "^3.1.0",
+    "cz-conventional-changelog": "^3.2.0",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "prettier": "^2.0.4",
@@ -65,5 +66,10 @@
   "peerDependencies": {
     "boardgame.io": "^0.39.16",
     "react": "^16"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
