--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "rimraf": "^3.0.2",
     "standard-version": "^8.0.2",
     "ts-jest": "^26.1.3",
-    "ts-toolbelt": "^6.5.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
     "mitt": "^2.1.0",
     "nanoid": "^3.1.3",
-    "react-use": "^15.3.2"
+    "react-use": "^15.3.2",
+    "ts-toolbelt": "^6.5.0"
   },
   "peerDependencies": {
     "boardgame.io": "^0.39.16",
