--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bgio-effects/react",
   "private": true,
-  "main": "../dist/react.js",
-  "types": "../dist/react.d.ts"
+  "main": "../dist/react/index.js",
+  "types": "../dist/react/index.d.ts"
 }
