--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ latest ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ latest ]
 jobs:
   test:
     runs-on: ubuntu-latest
