--- a/package.json
+++ b/package.json
@@ -41,6 +41,15 @@
       "plugin:react-hooks/recommended"
     ],
     "rules": {
+      "@typescript-eslint/no-empty-function": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
+      "@typescript-eslint/no-unused-vars": ["warn", {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false,
+        "argsIgnorePattern": "_.+"
+      }]
     },
     "settings": {
       "react": {
