--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [10.x, 12.x, 14.x, 15.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node: [10.x, 12.x, 14.x, 15.x]
+        # Test with oldest and newest supported boardgame.io versions
+        bgio: [0.39.16, latest]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node }}
@@ -26,12 +28,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             ${{ runner.os }}-
-      - run: npm ci
+      - name: Install npm dependencies
+        run: npm ci
+      - name: Install boardgame.io@${{ matrix.bgio }}
+        run: npm i -D boardgame.io@${{ matrix.bgio }}
       - run: npm test
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          flag-name: test-node@${{ matrix.node }}
+          flag-name: test-node@${{ matrix.node }}-bgio@${{ matrix.bgio }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel: true
           path-to-lcov: ./coverage/lcov.info
