--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
       "@typescript-eslint/no-empty-function": "off",
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/no-unused-vars": ["warn", {
-        "vars": "all",
-        "args": "after-used",
-        "ignoreRestSiblings": false,
-        "argsIgnorePattern": "_.+"
-      }]
+      "@typescript-eslint/no-unused-vars": [
+        "warn",
+        {
+          "vars": "all",
+          "args": "after-used",
+          "ignoreRestSiblings": false,
+          "argsIgnorePattern": "_.+"
+        }
+      ]
     },
     "settings": {
       "react": {
@@ -107,8 +110,8 @@
     "ts-toolbelt": "^8.0.6"
   },
   "peerDependencies": {
-    "boardgame.io": "^0.39.16",
-    "react": "^16"
+    "boardgame.io": ">=0.39.16",
+    "react": "^16 || ^17"
   },
   "config": {
     "commitizen": {
