--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        node: [10.x, 12.x, 14.x, 15.x]
+        node: [12.x, 14.x, 16.x]
         # Test with oldest and newest supported boardgame.io versions
         bgio: [0.39.16, latest]
     steps:
