--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
+    "client/**/*",
     "dist/**/*",
     "plugin/**/*",
     "react/**/*"
@@ -97,11 +98,10 @@
   },
   "dependencies": {
     "mitt": "^3.0.0",
-    "react-use": "^17.2.3",
     "ts-toolbelt": "^9"
   },
   "peerDependencies": {
-    "boardgame.io": ">=0.39.16",
+    "boardgame.io": ">=0.42.0",
     "react": "^16 || ^17"
   },
   "config": {
