--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prettier": "prettier --write --single-quote src",
     "pretest": "npm run lint",
     "test": "jest --coverage --collectCoverageFrom=src/**/*",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predocs:build": "rm -f bgio-effects.tgz && npm pack && mv bgio-effects-*.tgz bgio-effects.tgz",
+    "docs:build": "cd docs && npm i && npm run build"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
