--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "pretest": "npm run lint",
     "test": "jest --coverage --collectCoverageFrom=src/**/*",
     "prepare": "husky install",
-    "predocs:build": "rm -f bgio-effects.tgz && npm run build && npm pack && mv bgio-effects-*.tgz bgio-effects.tgz",
-    "docs:build": "cd docs && npm i && npm run build"
+    "predocs:build": "npm run build && npm pack && cd docs && npm i ../bgio-effects-*.tgz && npm i",
+    "docs:build": "cd docs && npm run build"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
