ci(gh-pages): Only rebuild GitHub Pages when docs change

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - latest
+    paths:
+      - '.github/workflows/gh-pages.yml'
+      - 'docs/**'
 
 jobs:
   deploy:
