docs: Bump Astro from 0.22.14 to 0.22.17

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "preview": "npx serve dist"
   },
   "dependencies": {
-    "bgio-effects": "file:../bgio-effects.tgz",
+    "bgio-effects": "file:../bgio-effects-0.6.0.tgz",
     "boardgame.io": "^0.49.10"
   },
   "devDependencies": {
